// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browser should navigate to the URL in the navbar on an Enter keypress 1`] = `
<div
  className="root"
>
  <input
    autoFocus={true}
    className="navigation"
    onChange={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    type="text"
    value="http://example.com"
  />
  
  <webview
    className="webview"
    src="http://example.com"
  />
</div>
`;

exports[`Browser should render a default browser view 1`] = `
<div
  className="root"
>
  <input
    autoFocus={true}
    className="navigation"
    onChange={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    type="text"
    value="http://google.com"
  />
  
  <webview
    className="webview"
    src=""
  />
</div>
`;

exports[`Browser should show an error on a webview load error 1`] = `
<div
  className="root"
>
  <input
    autoFocus={true}
    className="navigation"
    onChange={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    type="text"
    value="http://google.com"
  />
  <div
    className="errorContainer"
  >
    <div>
      Error: 
      oh no!
    </div>
  </div>
  <webview
    className="webview"
    src=""
  />
</div>
`;

exports[`Browser should update the value in the navbar as the user types 1`] = `
<div
  className="root"
>
  <input
    autoFocus={true}
    className="navigation"
    onChange={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    type="text"
    value="http://google.com"
  />
  
  <webview
    className="webview"
    src=""
  />
</div>
`;

exports[`Browser should update the value in the navbar as the user types 2`] = `
<div
  className="root"
>
  <input
    autoFocus={true}
    className="navigation"
    onChange={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    type="text"
    value="example.com"
  />
  
  <webview
    className="webview"
    src=""
  />
</div>
`;
